# cherivm

./: .cproject  .gitignore  .project  BenchmarkMultiply.java  BenchmarkNop.java  BenchmarkSyscall.java  BenchmarkZlib.java  Makefile  README.md  SandboxTest.c  SandboxTest.java  Sandboxed.java  autogen.sh  bench_unsafe.c  build_sdk.sh  chericc.inc  config.inc  configure.sh  full_build.sh  make.sh  sandbox_Sandboxed.c  syscalls.sh
sandbox/: BenchmarkMultiply.java  BenchmarkZlib.java  Sandbox.java  Sandboxed.java  bench.c  bench_unsafe.c  sandbox_Sandboxed.c
src/classpath/: Makefile.in  aclocal.m4  configure  configure.ac
src/classpath/doc/: Makefile.in
src/classpath/doc/api/: Makefile.in
src/classpath/examples/: Makefile.in
src/classpath/gnu/java/net/local/: LocalSocketImpl.java
src/classpath/gnu/java/nio/: EpollSelectorImpl.java  FileChannelImpl.java  KqueueSelectorImpl.java
src/classpath/include/: Makefile.in  cherijni.h  jni.h
src/classpath/java/lang/: Math.java  Runtime.java  System.java
src/classpath/lib/: Makefile.am  Makefile.in  gen-classlist.sh.in
src/classpath/native/: Makefile.in
src/classpath/native/fdlibm/: Makefile.in
src/classpath/native/jawt/: Makefile.in
src/classpath/native/jni/: Makefile.am  Makefile.in
src/classpath/native/jni/classpath/: Makefile.in
src/classpath/native/jni/gconf-peer/: Makefile.in
src/classpath/native/jni/gstreamer-peer/: Makefile.in
src/classpath/native/jni/gtk-peer/: Makefile.in
src/classpath/native/jni/java-full/: Makefile.am  cherijni_names.c
src/classpath/native/jni/java-io/: Makefile.am  Makefile.in  cherijni_names.c  java_io_VMConsole.c
src/classpath/native/jni/java-lang/: Makefile.am  Makefile.in  cherijni_names.c
src/classpath/native/jni/java-math/: Makefile.in
src/classpath/native/jni/java-net/: Makefile.am  Makefile.in  cherijni_names.c
src/classpath/native/jni/java-nio/: Makefile.am  Makefile.in  cherijni_names.c  gnu_java_nio_VMChannel.c  gnu_java_nio_VMSelector.c
src/classpath/native/jni/java-util/: Makefile.in
src/classpath/native/jni/jsodium/: Makefile.am  jsodium.c
src/classpath/native/jni/midi-alsa/: Makefile.in
src/classpath/native/jni/midi-dssi/: Makefile.in
src/classpath/native/jni/native-lib/: Makefile.in
src/classpath/native/jni/qt-peer/: Makefile.in
src/classpath/native/jni/sandbox/: Makefile.am
src/classpath/native/jni/sodium/: Makefile.am  cherijni_names.c  jsodium.c  sandbox.ld
src/classpath/native/jni/xmlj/: Makefile.in
src/classpath/native/plugin/: Makefile.in
src/classpath/resource/: Makefile  Makefile.in
src/classpath/scripts/: Makefile.in
src/classpath/tools/: Makefile.in
src/classpath/uk/ac/cam/cl/cheri/: Sandbox.java
src/classpath/vm/reference/gnu/java/net/: VMPlainDatagramSocketImpl.java  VMPlainSocketImpl.java
src/classpath/vm/reference/java/io/: VMFile.java  VMObjectInputStream.java  VMObjectStreamClass.java
src/classpath/vm/reference/java/lang/: VMDouble.java  VMFloat.java  VMMath.java  VMRuntime.java  VMSystem.java
src/classpath/vm/reference/java/net/: VMInetAddress.java  VMNetworkInterface.java  VMURLConnection.java
src/classpath/vm/reference/java/nio/: VMDirectByteBuffer.java
src/classpath/vm/reference/java/util/: VMTimeZone.java
src/jamvm/: Makefile.in  configure  configure.ac
src/jamvm/lib/: Makefile.am  Makefile.in
src/jamvm/lib/gnu/: Makefile.in
src/jamvm/lib/gnu/classpath/: Makefile.in
src/jamvm/lib/jamvm/: Makefile.in
src/jamvm/lib/jamvm/java/: Makefile.in
src/jamvm/lib/jamvm/java/lang/: Makefile.in
src/jamvm/lib/java/: Makefile.in
src/jamvm/lib/java/lang/: Makefile.in  VMRuntime.java  VMSandboxedNative.java
src/jamvm/lib/java/lang/reflect/: Makefile.in
src/jamvm/lib/java/security/: Makefile.in
src/jamvm/lib/sun/: Makefile.in
src/jamvm/lib/sun/reflect/: Makefile.in
src/jamvm/lib/sun/reflect/annotation/: Makefile.in
src/jamvm/src/: Makefile.am  Makefile.in  access.c  alloc.c  alloc.h  cast.c  class.c  config.h.in  dll.c  dll_ffi.c  excep.c  execute.c  frame.c  init.c  jam.c  jam.h  jni-internal.h  jni.c  jni.h  lock.c  lock.h  natives.c  properties.c  reflect.c  reflect.h  resolve.c  sandbox.c  sandbox.h  sandbox_caps.c  sandbox_internal.h  sandbox_shared.h  sandbox_trampoline.c  sig.c  sjni.c  string.c  symbol.h  thread.c  thread.h  zip.c
src/jamvm/src/arch/: Makefile.in  mips.h
src/jamvm/src/interp/: Makefile.in  direct.c  inlining.c
src/jamvm/src/interp/engine/: Makefile.in  compute_relocatability.c  interp-direct.h  interp-indirect.h  interp-inlining.h  interp.c
src/jamvm/src/os/: Makefile.in
src/jamvm/src/os/bsd/: Makefile.in  os.c
src/jamvm/src/os/bsd/arm/: Makefile.in
src/jamvm/src/os/bsd/i386/: Makefile.in
src/jamvm/src/os/bsd/mips/: Makefile.in  callNative.S  dll_md.c
src/jamvm/src/os/bsd/powerpc/: Makefile.in  dll_md.c
src/jamvm/src/os/bsd/sparc/: Makefile.in
src/jamvm/src/os/bsd/x86_64/: Makefile.in
src/jamvm/src/os/darwin/: Makefile.in
src/jamvm/src/os/darwin/arm/: Makefile.in  dll_md.c
src/jamvm/src/os/darwin/i386/: Makefile.in  dll_md.c
src/jamvm/src/os/darwin/powerpc/: Makefile.in  dll_md.c
src/jamvm/src/os/linux/: Makefile.in
src/jamvm/src/os/linux/arm/: Makefile.in  dll_md.c
src/jamvm/src/os/linux/i386/: Makefile.in  dll_md.c
src/jamvm/src/os/linux/mips/: Makefile.in  dll_md.c
src/jamvm/src/os/linux/parisc/: Makefile.in
src/jamvm/src/os/linux/powerpc/: Makefile.in
src/jamvm/src/os/linux/x86_64/: Makefile.in  dll_md.c
src/jamvm/src/os/solaris/: Makefile.in
src/jamvm/src/os/solaris/x86/: Makefile.in  dll_md.c
src/libcherijni/: aclocal.m4  config.h.in  config.status  configure  configure.ac  libtool
src/libcherijni/src/: Makefile.am  callCheriJNI.S  cherijni.h  chsbrt.S  guest.c  guest.h  javavm.c  jni.h  jnienv.c  libc.c  obj_manager.c  sandbox_shared.h  stubs.c  test.c
src/libsodium/autom4te.cache/: output.1  requests  traces.0  traces.1
src/sodium_test/: SodiumTest.java
src/test/: Makefile  Prompt.c  Prompt.java  cherijni_guest.c  cherijni_jnienv.c  cherijni_names.c
(+3 files in other folders)
